[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Malcolm Akinje <malcolm.akinje@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.5.11"
reqwest="*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }